# django-receitas

./: README.md  pyproject.toml
alurareceita/: settings.py  urls.py
apps/receitas/: admin.py  decorators.py  models.py  urls.py
apps/receitas/migrations/: 0001_initial.py  0002_receitas_pessoa.py  0003_receitas_publicada.py  0004_receitas_foto_receita.py  0005_auto_20210322_0038.py
apps/receitas/views/: busca.py  receita.py
apps/usuario/: decorators.py  urls.py  views.py
helpers/: mensagem.py  paginacao.py
pessoas/: admin.py  models.py
pessoas/migrations/: 0001_initial.py
templates/: base.html  index.html
templates/partials/: _alerta.html  _busca.html  _footer.html  _menu.html
templates/receitas/: criar_receita.html  editar_receita.html  lista_receitas.html  receita.html
templates/usuario/: cadastro.html  dashboard.html  login.html
