[tool.poetry]
name = "django-receitas"
version = "0.1.0"
description = ""
authors = ["menegasse <menegassehugo12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
